[package]
name = "bevy"
version = "0.1.0"
authors = ["Carter Anderson <mcanders1@gmail.com>"]
edition = "2018"

[features]
default = ["wgpu", "winit"]
more-system-fns = ["legion/more-system-fns"]
filesystem_watcher = []
profiler = []

[workspace]
members = [
    "crates/bevy_derive",
    "crates/bevy_property",
    "examples/app/dynamic_plugin_loading/example_plugin"
]

[dependencies]
# bevy
bevy_derive = { path = "crates/bevy_derive" }
bevy_property = { path = "crates/bevy_property" }
legion = { path = "crates/bevy_legion", features = ["serialize"] }
hecs = { path = "crates/hecs", features = ["macros"] }

ab_glyph = "0.2.2"
anyhow = "1.0"
bitflags = "1.0"
crossbeam-channel = "0.4.2"
crossbeam-utils = "0.7.2"
downcast-rs = "1.1.1"
erased-serde = "0.3"
glam = "0.8.7"
glsl-to-spirv = { git = "https://github.com/cart/glsl-to-spirv" }
gltf = "0.15.2"
guillotiere = "0.5.2"
libloading = "0.5.2"
log = { version = "0.4", features = ["release_max_level_info"] }
notify = { version = "5.0.0-pre.2", optional = true }
once_cell = "1.3.1"
png = "0.16.0"
pollster = "0.2.0"
rayon = "1.2"
rectangle-pack = "0.1"
ron = { git = "https://github.com/ron-rs/ron", rev = "35355ba7eb495f07282162826c29873154c2fa14" }
serde = { version = "1", features = ["derive"] }
shrinkwraprs = "0.2"
smallvec = { version = "1.4", features = ["serde"] }
spirv-reflect = "0.2.3"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "7b866b1a1b72d4ecb7a63e11fbc8f521fe9eb363", optional = true }
winit = { version = "0.22.2", optional = true }

[dev-dependencies]
rand = "0.7.2"
serde = { version = "1", features = ["derive"]}
env_logger = "0.7"

[profile.dev]
opt-level = 3

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "sprite"
path = "examples/2d/sprite.rs"

[[example]]
name = "sprite_sheet"
path = "examples/2d/sprite_sheet.rs"

[[example]]
name = "texture_atlas"
path = "examples/2d/texture_atlas.rs"

[[example]]
name = "load_model"
path = "examples/3d/load_model.rs"

[[example]]
name = "parenting"
path = "examples/3d/parenting.rs"

[[example]]
name = "3d_scene"
path = "examples/3d/3d_scene.rs"

[[example]]
name = "spawner"
path = "examples/3d/spawner.rs"

[[example]]
name = "texture"
path = "examples/3d/texture.rs"

[[example]]
name = "z_sort_debug"
path = "examples/3d/z_sort_debug.rs"

[[example]]
name = "dynamic_plugin_loading"
path = "examples/app/dynamic_plugin_loading/main.rs"

[[example]]
name = "empty_defaults"
path = "examples/app/empty_defaults.rs"

[[example]]
name = "empty"
path = "examples/app/empty.rs"

[[example]]
name = "headless"
path = "examples/app/headless.rs"

[[example]]
name = "plugin"
path = "examples/app/plugin.rs"

[[example]]
name = "hot_asset_reloading"
path = "examples/asset/hot_asset_reloading.rs"

[[example]]
name = "asset_loading"
path = "examples/asset/asset_loading.rs"

[[example]]
name = "custom_diagnostic"
path = "examples/diagnostics/custom_diagnostic.rs"

[[example]]
name = "print_diagnostics"
path = "examples/diagnostics/print_diagnostics.rs"

[[example]]
name = "bevy_ecs"
path = "examples/ecs/bevy_ecs.rs"

[[example]]
name = "event"
path = "examples/ecs/event.rs"

[[example]]
name = "startup_system"
path = "examples/ecs/startup_system.rs"

[[example]]
name = "ecs_guide"
path = "examples/ecs/ecs_guide.rs"

[[example]]
name = "breakout"
path = "examples/game/breakout.rs"

[[example]]
name = "mouse_input"
path = "examples/input/mouse_input.rs"

[[example]]
name = "mouse_input_events"
path = "examples/input/mouse_input_events.rs"

[[example]]
name = "keyboard_input"
path = "examples/input/keyboard_input.rs"

[[example]]
name = "keyboard_input_events"
path = "examples/input/keyboard_input_events.rs"

[[example]]
name = "load_scene"
path = "examples/scene/load_scene.rs"

[[example]]
name = "properties"
path = "examples/scene/properties.rs"

[[example]]
name = "shader_custom_material"
path = "examples/shader/shader_custom_material.rs"

[[example]]
name = "shader_defs"
path = "examples/shader/shader_defs.rs"

[[example]]
name = "text"
path = "examples/ui/text.rs"

[[example]]
name = "font_atlas_debug"
path = "examples/ui/font_atlas_debug.rs"

[[example]]
name = "ui"
path = "examples/ui/ui.rs"

[[example]]
name = "ui_bench"
path = "examples/ui/ui_bench.rs"

[[example]]
name = "clear_color"
path = "examples/window/clear_color.rs"

[[example]]
name = "multiple_windows"
path = "examples/window/multiple_windows.rs"