[package]
name = "bevy_ecs"
version = "0.1.0"
authors = ["Carter Anderson <mcanders1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = { path = "hecs", features = ["macros"] }
uuid = { version = "0.8", features = ["v4", "serde"] }